# wgpu-specs

./: Cargo.toml
src/: main.rs
src/lib/: camera.rs  mod.rs  util.rs
src/lib/graphics/: mod.rs
src/lib/graphics/cube/: mod.rs  shader.vert
src/lib/graphics/quad/: mod.rs  rust.xcf  shader.frag  shader.vert
src/lib/graphics/triangle/: mod.rs
