[package]
name = "wgpu-specs"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
cgmath = "0.17.0"
env_logger = "0.6.2"
log = "0.4.8"
glsl-to-spirv = "0.1.7"
image = "0.22.1"
rand = "0.7.0"
raw-window-handle = "0.1"
specs = "0.15.0"
specs-derive = "0.4.0"
winit = "0.20.0-alpha3"

# wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
[dependencies.wgpu]
version = "0.3"
features = ["vulkan"]